// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomCell component CustomCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          customRender
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          customRenderEdit
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          customRenderEdit
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          customRender
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          FORCEDVALUE
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders without forced value and without row 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          -
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
